--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,13 @@ html {
     font-size: 62.5%;
 }
 body {
-    color: var(--color-text-light);
+    color: var(--color-light);
     font-size: 1.8rem;
-    line-height: 1.5;
+    line-height: 1.6;
+    background-color: var(--color-primary);
 }
 h1,h2,h3 {
-    color: var(--color-text-light);
+    color: var(--color-light);
     font-weight: 700;
 }
 h2 {
@@ -30,6 +31,7 @@ p {
     --color-primary: #10A9DA;
     --color-text-primary-dark:  #0E5D80;
     --color-text-primary-light: #53B9D9;
-    --color-text-light: #FFFFFF;
+    --color-light: #FFFFFF;
+    --color-dark: #F6F6F6;
     --border-radius: 14px;
 }
