create btn style css modifire

--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,28 @@ p {
     --color-dark: #F6F6F6;
     --border-radius: 14px;
 }
+
+/* Btn */
+.btn {
+    outline: 0;
+    color: var(--color-text-primary-dark);
+    background-color: var(--color-light);
+    padding: 1.2rem 1.5rem;
+    border: 0;
+    border-radius: 8px;
+    font-weight: bolder;
+    font-size: 1.8rem;
+
+}
+.btn--outline{
+    background-color: transparent;
+    border: 3px solid var(--color-text-primary-dark);
+    color: var(--color-text-primary-dark);
+}
+.btn--primary {
+    background-color: var(--color-primary);
+    color: var(--color-dark);
+}
+.btn--small{
+    font-size: 1.5rem;
+}
