--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ p {
     --border-radius: 8px;
 }
 /* Modifire */
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 .block {
     padding: 2rem 2rem;
 }
@@ -52,6 +56,10 @@ p {
     font-size: 1.8rem;
     margin: 2.5rem 0;
 
+}
+.btn--white {
+    background-color: var(--color-light);
+    color: var(--color-primary-dark);
 }
 .btn--outline{
     background-color: transparent;
@@ -99,10 +107,43 @@ p {
 }
 
 /* Hero image */
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .hero__image {
     display: flex;
     justify-content: center;
+    max-height: 300px;
 }
 .hero__image img{
     width: 70%;
+    /* transform: scaleX(-1); */
+}
+.hero__caption {
+    max-width: 600px;
+}
+@media screen and (min-width: 1024px) {
+    .hero {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+    .hero__image {
+        order: 1;
+    }
+    .hero__image img{
+        width: 100%;
+    }
+    .hero__caption{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        max-width: auto;
+    }
+    .hero__caption h1 {
+        font-size: 5rem;
+    }
 }
