--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,43 @@ p {
         font-size: 5rem;
     }
 }
+
+/* categories */
+.categories {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 2.5rem;
+}
+.categories__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.7rem;
+    flex-shrink: 1;
+}
+.categories__item img{
+    width: 75px;
+    height: 75px;
+    object-fit: contain;
+    padding: 1rem;
+    background-color: var(--color-dark);
+    border-radius: 25px;
+    
+}
+.categories__item p {
+    text-align: center;
+}
+@media screen and (min-width: 1024px) {
+    .categories {
+        grid-template-columns: auto;
+        grid-auto-flow: column;
+    }
+    .categories__item {
+        gap: 1.5rem
+    }
+    .categories__item img{
+        width: 90px;
+        height: 90px;
+    }
+}
