--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,9 @@ p {
 .block {
     padding: 2rem 2rem;
 }
+.block-y {
+    margin: 3.5rem 0 0 0;
+}
 /* Btn */
 .btn {
     outline: 0;
@@ -111,6 +114,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .hero__image {
     display: flex;
@@ -127,11 +131,13 @@ p {
 @media screen and (min-width: 1024px) {
     .hero {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         flex-direction: row;
     }
     .hero__image {
         order: 1;
+        display: flex;
+        justify-content: space-between;
     }
     .hero__image img{
         width: 100%;
@@ -185,5 +191,32 @@ p {
     .categories__item img{
         width: 90px;
         height: 90px;
+    }
+}
+/* -introduction */
+.introduction {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.introduction__image {
+    display: flex;
+    justify-content: center;
+}
+.introduction__text {
+    text-align: center;
+    display: block;
+    flex-direction: column;
+    justify-content: center;
+}
+@media screen and (min-width: 1024px) {
+    .introduction {
+        align-items: center;
+    }
+    .introduction__text {
+        max-width: 65%;
+    }
+    .introduction__image {
+        order: 1;
     }
 }
